8215123: Crash in runtime image built with jlink --compress=2

Reviewed-by: ihse, alanb